--- a/HW3.html
+++ b/HW3.html
@@ -22,13 +22,13 @@
 			</tr>
 		</table>
 		<script>
-			$.getJSON('firstwebsite.json', function(data) {
+			$.getJSON("{'data':['code':'something','result':'something else']}", function(data) {
 				for(var i=0; i<data.data.length;i++){
-					$.each(data.data[i], function(key, value) {
+					$.each(data.data[i], function(key, val) {
 						if(key=="code"){
-							var tblRow = "<tr><td>" + value + "</td><td>";
+							var tblRow = "<tr><td>" + val + "</td><td>";
 						} else {
-							tblRow += value + "</td></tr>";
+							tblRow += val + "</td></tr>";
 							$("#md").append(tblRow);
 						}
 					});
@@ -36,11 +36,11 @@
 			});
 			$.getJSON('secondwebsite.json', function(data) {
 				for(var i=0; i<data.data.length;i++){
-					$.each(data.data[i], function(key, value) {
+					$.each(data.data[i], function(key, val) {
 						if(key=="code"){
-							var tblRow = "<tr><td>" + value + "</td><td>";
+							var tblRow = "<tr><td>" + val + "</td><td>";
 						} else {
-							tblRow += value + "</td></tr>";
+							tblRow += val + "</td></tr>";
 							$("#html").append(tblRow);
 						}
 					});
@@ -48,11 +48,11 @@
 			});
 			$.getJSON('thirdwebsite.json', function(data) {
 				for(var i=0; i<data.data.length;i++){
-					$.each(data.data[i], function(key, value) {
+					$.each(data.data[i], function(key, val) {
 						if(key=="code"){
-							var tblRow = "<tr><td>" + value + "</td><td>";
+							var tblRow = "<tr><td>" + val + "</td><td>";
 						} else {
-							tblRow += value + "</td></tr>";
+							tblRow += val + "</td></tr>";
 							$("#css").append(tblRow);
 						}
 					});
