--- a/HW3.html
+++ b/HW3.html
@@ -26,8 +26,10 @@
 				for(var i=0; i<data.data.length;i++){
 					$.each(data.data[i], function(key, val) {
 						if(key=="code"){
+							console.log(val)
 							var tblRow = "<tr><td>" + val + "</td><td>";
 						} else {
+							console.log(val)
 							tblRow += val + "</td></tr>";
 							$("#md").append(tblRow);
 						}
