--- a/HW3.html
+++ b/HW3.html
@@ -27,7 +27,7 @@
 					$.each(data.data[i], function(key, val) {
 						if(key=="code"){
 							console.log(val);
-							var tblRow = "<tr><td>" + val.toString() + "</td><td>";
+							var tblRow = `<tr><td>${val.toString()}</td><td>`;
 						} else {
 							console.log(val);
 							tblRow += val + "</td></tr>";
@@ -41,7 +41,7 @@
 					$.each(data.data[i], function(key, val) {
 						if(key=="code"){
 							console.log(val);
-							var tblRow = "<tr><td>" + val.toString() + "</td><td>";
+							var tblRow = `<tr><td>${val.toString()}</td><td>`;
 						} else {
 							console.log(val);
 							tblRow += val + "</td></tr>";
@@ -55,7 +55,7 @@
 					$.each(data.data[i], function(key, val) {
 						if(key=="code"){
 							console.log(val);
-							var tblRow = "<tr><td>" + val.toString() + "</td><td>";
+							var tblRow = `<tr><td>${val.toString()}</td><td>`;
 						} else {
 							console.log(val);
 							tblRow += val + "</td></tr>";
