--- a/HW3.html
+++ b/HW3.html
@@ -1,6 +1,25 @@
 <html>
 	<head>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<style>
+			blockquote {
+				border-left: 5px solid #ccc;
+				margin: 1.5em 10px;
+				padding: 0.5em 10px;
+			}
+			.custom-hr {
+				border-top: 3px solid #E1E1E1;
+				margin-top: 1rem;
+			}
+			.code-block {
+				background:#F1F1F1;
+				border: 1px solid #E1E1E1;
+				border-radius: 4px;
+				font-size: 90%;
+				padding: .2rem .5rem;
+				font-family: 'Roboto Mono', 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
+			}
+		</style>
 	</head>
 	<body>
 		<table id="md" border="1">
