--- a/HW3.html
+++ b/HW3.html
@@ -19,6 +19,12 @@
 				padding: .2rem .5rem;
 				font-family: 'Roboto Mono', 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
 			}
+			code, kbd, pre, samp, .editor, .html-pad, .preformatted {
+				font: 1em/normal 'Roboto Mono', 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
+			}
+			.preformatted {
+				font-size: 0.9em;
+			}
 		</style>
 	</head>
 	<body>
